--- a/MyToolbox1.0/config/settings.json
+++ b/MyToolbox1.0/config/settings.json
@@ -1,8 +1,8 @@
 {
-    "theme": "Light",
+    "theme": "Auto",
     "window_size": [
         1133,
-        838
+        835
     ],
     "custom_colors": {},
     "plugin_order": [
